--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,5 +1,9 @@
 @import "../../vars.css";
 
+.menuBtn {
+    display: none;
+}
+
 .navbar {
     position: relative;
     display: flex;
@@ -32,7 +36,6 @@
     color: var(--color-text);
     text-decoration: none;
 }
-
 
 @media screen and (max-width: 830px) {
     .navbar {
