--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -7,14 +7,18 @@
     background: linear-gradient(180deg, #576cbc 0%, #132a53 100%);
     box-shadow: 0 16px 14px 0 #04152d;
     padding: 18px 24px;
-    max-width: 345px;
+    width: 345px;
+    height: 512px;
+
 }
 
 .image {
-    margin-bottom: 26px;
+    width: 300px;
+    height: 163px;
 }
 
 .title {
+    margin-top: 10px;
     font-size: 25px;
     font-weight: 700;
 }
