--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -61,4 +61,13 @@
     .links {
         align-items: center;
     }
+
+    .link a {
+        color: var(--color-text);
+        text-decoration: none;
+        font-size: 20px;
+        font-weight: 400;
+        letter-spacing: 1.5px;
+    }
+
 }
